--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Municio De Eldorado (sp)</h2>
     <section class="box">
         <h1>Caverna Do Diabo</h1>
-        <img src="img/caverna-do-diabo.jpg"
+        <img src="img/caverna-do-diabo.jpg">
         <p>Caverna do Diabo é uma caverna existente no Parque Estadua
             l Caverna do Diabo, município de Eldorado. É a maior caverna 
             do Estado de São Paulo Descoberta por pesquisadores há mais de 100 anos,
@@ -39,6 +39,7 @@
                           inclinação. O topo é aberto, quase sem vegetação, e com rochas expostas,
                            o que facilita a visualização da paisagem em todos os ângulos. Com frequência,
                             pode-se observar a fauna da região.</p>
+                            <a href="home.html"><button>Clique Aqui</button></a>
     </section>
     <footer><a href="https://www.eldorado.sp.gov.br/portal/servicos/202/amazonia-paulista/atrativos-turisticos/">PARA MAIS ACESSE AQUI</a></footer>
 </body>
